2017-03-21  Sergio Villar Senin  <svillar@igalia.com>

        All http/ tests with PHP fail in Debian unstable with php7
        https://bugs.webkit.org/show_bug.cgi?id=169913

        Reviewed by Michael Catanzaro.

        The problem is that the configuration file was still checking for php5 instead of php7.

        * http/conf/debian-httpd-2.4-php7.conf:

2017-05-21  Saam Barati  <sbarati@apple.com>

        We incorrectly throw a syntax error when declaring a top level for-loop iteration variable the same as a parameter
        https://bugs.webkit.org/show_bug.cgi?id=171041
        <rdar://problem/32082516>

        Reviewed by Yusuke Suzuki.

        * js/parser-syntax-check-expected.txt:
        * js/script-tests/parser-syntax-check.js:

2017-12-08  Konstantin Tokarev  <annulen@yandex.ru>

        [python] Replace print operator with print() function for python3 compatibility
        https://bugs.webkit.org/show_bug.cgi?id=180592

        Reviewed by Michael Catanzaro.

        * html5lib/generate-test-wrappers.py:
        (_remove_stale_tests):
        * http/tests/websocket/tests/hybi/bad-handshake-crash_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/handshake-fail-by-more-accept-header_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/handshake-fail-by-no-connection-header_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/handshake-fail-by-no-cr_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/handshake-fail-by-no-upgrade-header_wsh.py:
        (web_socket_do_extra_handshake):

2016-06-02  Oliver Hunt  <oliver@apple.com>

        JS parser incorrectly handles invalid utf8 in error messages.
        https://bugs.webkit.org/show_bug.cgi?id=158128

        Reviewed by Saam Barati.

        Add a testcase.

        * js/invalid-utf8-in-syntax-error-expected.txt: Added.