@@ -1,3 +1,12 @@
+2016-12-09  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Fedora also needs a PHP7 config file alternative
+        https://bugs.webkit.org/show_bug.cgi?id=165606
+
+        Reviewed by Michael Catanzaro.
+
+        * http/conf/fedora-httpd-2.4-php7.conf: Added.
+
 2017-03-21  Sergio Villar Senin  <svillar@igalia.com>
 
         All http/ tests with PHP fail in Debian unstable with php7
